src/App.scss
$dark-green:#255B47;
$light-green:#B3F3E3;
$dark-blue: #32637A;
$light-blue: #8AD0E0;
$dark-grey: #292C3D;
$light-grey:#979CB2;
$cream: #EDECE1;
$peach: #FFEBDD;
$brown: #68403C;
$warning: #7A212F;

a {
    text-decoration: none;
}

.main {
    display: flex;
    &.centered {
        justify-content: center;
        #header {
            width: 100%;
            // margin: 0;
            margin: 0 6px;
            position: fixed;
            top: 2px;
            // left: 2px;
        }
        .info {
            width: 60%;
        }
        #quick {
            margin: auto;
        }
    }
    flex-direction: column;
    align-items: center;
    min-height: 100vh;
    &.light {
        color: $dark-grey;
        background-color: $cream;
        .bug {
            background-color: $light-green;
        }
        .fish {
            background-color: $light-blue;
        }
        .MuiCardHeader-root, .MuiCardContent-root {
            color: $dark-grey;
        }
        .MuiAvatar-circle.on {
            background-color: $brown;
        }
    }
    &.dark {
        background-color: #292C3D;
        color: $cream;
        .bug {
            background-color: $dark-green;
        }
        .fish {
            background-color: $dark-blue;
        }
        .MuiCardHeader-root, .MuiCardContent-root {
            color: $cream;
        }
        .MuiAvatar-circle.on {
            background-color:$brown;
        }
        .MuiCheckbox-root {
            color: $cream;
        }
    }

    #header {
        width: 98%;
        display: flex;
        justify-content: space-between;
        align-items: center;
        margin: 0 1%;
        h1 {
            margin: 0.2em 0;
        }
        #signout, #signin {
            margin-left: 8px;
        }
        #lights {
            background-color: $light-grey;
            height: 40px;
            width: 40px;
        }
    }

    .little {
        display: flex;
        // flex-direction: column;
        justify-content: space-around;
        align-items: center;
        align-self: stretch;
        width: 90%;
        margin: 8px auto;
        h1 {
            font-size: 1.2em;
            margin: 0.2em;
        }
        h2 {
            font-size: 1em;
            margin: 0.2em;
        }
    }

    .MuiCardContent-root:last-child {
        padding-bottom: 8px;
    }
    .MuiAvatar-root {
        width: 30px;
        height: 30px;
        &.warning {
            background-color: $warning;
        }
    }
    #collections {
        display: flex;
        justify-content: space-between;
        margin-top: 4px;
        >div {
            display: flex;
            // flex-direction: column;
            align-items: center;
            justify-content: space-around;
        }
        .MuiAvatar-root {
            width: 25px;
            height: 25px;

        }
        .MuiIconButton-root {
            padding: 2px 1px 2px 5px;
        }
    }
    #extraInfo {
        display: flex;
        justify-content: space-between;
        p {
            margin: 0.5em 0;
        }
    }

}

#quick {
    display: flex;
    justify-content: space-between;
    width: 80%;
}

.available {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
}

.main .available .MuiCardHeader-root {
    flex-direction: row-reverse;
    margin-right: 0;
}

.main .available .MuiCardHeader-avatar {
    margin-right: 0;
}

@media (max-width: 705px) {
    #header {
        position: fixed;
        top: unset;
        bottom: 2px;
        right: 2px;
        z-index: 1;
    }

    .info {
        width: 80%;
        margin: auto;
    }
    .little {
        flex-direction: column;
        margin: 0 10px;
    }

    .intro {
        // width: 90%;
        margin: 0 auto;
    }

    #quick {
        width: 95%;
        align-items: center;
        flex-wrap: wrap;
        button {
            margin: 2px 0;
        }
    }

    .reduce {
        display: none;
    }
}

